# sdd-dual-loop

./: README.md  progress.yaml  pyproject.toml
.github/workflows/: test.yml
docs/: dual-loop-architecture.md  quick-start.md  user-guide.md
docs/milestones/: M1-acceptance.md  M1.md  M2.md  M3-acceptance.md  M3.md  M4-acceptance.md  M4.md
examples/fastapi-user-query/: README.md  requirement.md
examples/fastapi-user-query/app/: __init__.py  main.py  users.py
examples/fastapi-user-query/tests/: test_users.py
runs/20260722T141719+0800/: archive.md  brainstorming.md  code-diff.patch  input.md  plan.yaml  purpose.md  refactor.md  spec.yaml  test-result.yaml  verify.yaml
src/sdd/: __init__.py  _persistence.py  change_spec.py  checkpoint.py  m2.py  m3.py  repository.py  resume.py  routing.py  scheduler.py  state_store.py  task_lock.py  task_registry.py  tools.py  versioning.py  workspace.py  worktree.py
src/sdd/core/: __init__.py  context.py  state.py  workflow.py
src/sdd/execution_loop/: __init__.py  development.py  feedback.py  refactor.py  testing.py
src/sdd/intention_loop/: __init__.py  archive.py  brainstorming.py  change_spec.py  planning.py  purpose.py  verify.py
src/sdd/models/: __init__.py  artifacts.py  run_context.py
src/sdd/prompts/: __init__.py  archive.md  brainstorming.md  (+6 more)
tests/: test_change_spec.py  test_checkpoint.py  test_m2.py  test_m3.py  test_m4.py  test_models.py  test_purpose.py  test_resume.py  test_routing.py  test_scheduler.py  test_state_store.py  test_task_lock.py  test_task_registry.py  test_versioning.py  test_worktree.py
